<resources>
    <string name="app_name">ShoeStore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="welcome">Welcome to Shoe Store</string>
    <string name="follow_instruction">Follow the Shoe Store instruction</string>
    <string name="instruction">Instruction</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="shoe_image">Shoe Image</string>
</resources>
