<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        tools:context="shoe_detail.ShoeDetailFragment">

        <TextView
            android:id="@+id/label_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/label_text" />

        <EditText
            android:id="@+id/et_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/company"
            android:hint="@string/company"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/size"
            android:hint="@string/size"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/et_company" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/description"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            app:layout_constraintTop_toBottomOf="@id/et_size" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@android:string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/bt_save"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>