<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--Used this layout To center the CardView-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Design with CardView for good look -->
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_margin="@dimen/medium_margin"
            app:cardElevation="4dp">

        <!--   CardView can have only one child so I used ConstraintLayout to design the UI-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="22dp"
                tools:context=".login.LoginFragment">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    app:layout_constraintBottom_toTopOf="@+id/et_email"
                    app:layout_constraintStart_toStartOf="@+id/et_email" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/enter_email"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.13" />

                <TextView
                    android:id="@+id/pass_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="@+id/et_email"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:autofillHints="@string/enter_password"
                    android:ems="10"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pass_label" />

                <Button
                    android:id="@+id/login_button"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>